--- a/default.css
+++ b/default.css
@@ -458,6 +458,34 @@ ul.style3 .date a:hover
 {
 }
 
+/** Feedback *//
+#popup{
+    z-index:10000;
+}
+
+#popup > div{
+	/**display: none;**/
+	float: center;
+	width: 400px;
+	height: 70px;
+	margin-left: 40%;
+	margin-right: 40%;
+	padding-bottom: 40px;
+	background-color: white;
+	box-shadow: 20px 20px 120px #6c6c6c;
+	border-radius: 5px;
+	position: fixed;
+	padding: 10px;
+
+}
+
+
+.closebutton {
+	float: right;
+	font-size: 30px;
+	color: #8EBEAE;
+
+}
 /** SIDEBAR */
 
 #sidebar
