--- a/default.css
+++ b/default.css
@@ -464,16 +464,17 @@ ul.style3 .date a:hover
 	z-index:10000;
 	float: center;
 	width: 400px;
-	height: 70px;
+	height: 80px;
 	margin-left: 40%;
 	margin-right: 40%;
-	padding-bottom: 40px;
+	padding-bottom: 50px;
 	background-color: white;
 	box-shadow: 20px 20px 120px #6c6c6c;
 	border-radius: 5px;
 	position: fixed;
 	padding: 10px;
-	
+	visibility: hidden;
+	text-align: center;
 
 }
 
@@ -482,8 +483,9 @@ ul.style3 .date a:hover
 	float: right;
 	font-size: 30px;
 	color: #8EBEAE;
-
+	margin-top: -13px;
 }
+
 /** SIDEBAR */
 
 #sidebar
