--- a/default.css
+++ b/default.css
@@ -358,13 +358,17 @@ ul.style3 .date a:hover
 #header
 {
 	overflow: hidden;
+	width: 100%;
 	border-bottom: 1px solid #E7E7E7;
 	/*position: relative;*/
 }
 .sticky{
 	position: fixed;
 	top: 0;
+	background-color: white;
 	width: 1200px;
+	margin: 0 auto;
+	overflow: hidden;
 }
 /** LOGO */
 
@@ -372,6 +376,7 @@ ul.style3 .date a:hover
 {
 	float: left;
 	width: 300;
+	margin-left: 40px;
 }
 
 #logo h1 a
