--- a/default.css
+++ b/default.css
@@ -525,9 +525,21 @@ ul.style3 .date a:hover
 #canvas{
 	background-origin: padding-box;
 	float: right; 
-	margin-right: -80px;
+	margin-right: 0px;
 	margin-top: -15px;
-		/**visibility: hidden; **/
+	visibility: visible; 
+}
+#canvaslachen{
+	background-origin: padding-box;
+	float: right; 
+	margin-right: 10px;
+	margin-top: -15px;
+}
+#canvasneutral{
+	background-origin: padding-box;
+	float: right; 
+	margin-right: 10px;
+	margin-top: -15px;
 }
 /* Footer */
 
