--- a/default.css
+++ b/default.css
@@ -502,52 +502,51 @@ ul.style3 .date a:hover
 }
 /* Registation*/
 #registieren{
-	width: 1200px;
-	margin: 30px auto;
+	width: 450px;
 	padding-bottom: 3px;
-	
+	margin-top: 30px;
+	margin-left: 400px;
 
 }
 #registieren p{
 	font-weight: bold;
 	font-size: 16px;
 	color: #8EBEAE;
+	overflow: hidden;
+	float: left;
 }
 
-#password, #email{
-	float: right;
-	margin-top: 7px;
-	
-}
-#email{
-	margin-right: 10px;
-}
-#canvas{
+#canvas, #canvaslachen, #canvasneutral{
+	margin-left: ;
 	background-origin: padding-box;
-	float: right; 
-	margin-right: 0px;
+	margin-left: 50px;
 	margin-top: -15px;
 	visibility: visible; 
 }
-#canvaslachen{
-	background-origin: padding-box;
-	float: right; 
-	margin-right: 10px;
-	margin-top: -15px;
+
+#mitarbeiter{
+	font-weight: bold;
+	font-size: 16px;
+	color: #8EBEAE;
+	overflow: hidden;
+	float: left;
+	width: 300px;
+	padding-bottom: 3px;
+	float: right;
+	margin-bottom: 30px;
+	margin-top: -70px;
+	margin-right: 400px;
+	text-align: center;
 }
-#canvasneutral{
-	background-origin: padding-box;
-	float: right; 
-	margin-right: 10px;
-	margin-top: -15px;
-}
+
 #personen div{
 	border-color:#8EBEAE;
 	border-width: 5px;
 	border-style: solid;
 	padding: 20px;
-	margin-top: 20px;
-	width: 20;
+	
+	float: right;
+	margin-top: 10px;
 }
 /* Footer */
 
@@ -592,6 +591,7 @@ ul.style3 .date a:hover
 
 #footer
 {
+	margin-top: 140px;
 	overflow: hidden;
 	padding: 30px 0px;
 	box-shadow: 0px -10px 0px rgba(0,0,0,0.03);
